src/objects/agf__ADM_Build__c.object
<CustomObject>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Release_Freeze__c</fullName>
        <label>Release Freeze</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Scrumforce_ID__c</fullName>
        <externalId>true</externalId>
        <label>Scrumforce ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Weeks_prior_to_release__c</fullName>
        <formula>IF ( NOT( ISNULL( agf__Release_Freeze__c ) ), 
CEILING( ( TODAY() - agf__Release_Freeze__c ) / 7 ),
null)</formula>
        <label>Weeks prior to release</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Build</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Builds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>